[package]
name = "blurhash-cli"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/timleg002/blurhash-cli"
description = "A CLI for encoding & decoding images using the blurhash algorithm"
keywords = ["blurhash", "image", "cli"]
license = "Apache-2.0/MIT"

[dependencies]
blurhash = "0.1.1"
image = "0.24.3"
base64 = "0.13.0"
anyhow = "1.0.61"

[dependencies.clap]
version = "3.2.16"
features = ["derive"]